# palette

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run.sh  scraped.json  scraped.txt  text
.github/workflows/: release.yml
deploy-agent/: README.md  deploy-agent.env.example  deploy-agent.sh  install.sh  palette.env.example
deploy-agent/systemd/: palette-app.service  palette-deploy-agent.service  palette-deploy-agent.timer
include/palette/: bot.hpp
include/palette/buttons/: registry.hpp  shades.hpp  tints.hpp
include/palette/commands/: blacktest.hpp  color.hpp  complementary.hpp  contrast.hpp  get_server_count.hpp  get_version.hpp  mix.hpp  registry.hpp  scheme.hpp  shades.hpp  splitcomplementary.hpp  tints.hpp  websafe.hpp  whitetest.hpp
include/palette/events/: guild.hpp  log.hpp  ready.hpp
include/palette/services/: color_api.hpp  color_utils.hpp  env_utils.hpp  message.hpp  palette_controls.hpp  palette_image.hpp  ratelimit.hpp  thread_pool.hpp  topgg.hpp
include/palette/types/: command_options.hpp
src/: bot.cpp  main.cpp
src/buttons/: registry.cpp  shades.cpp  tints.cpp
src/commands/: color.cpp  complementary.cpp  contrast_tests.cpp  get_server_count.cpp  get_version.cpp  mix.cpp  registry.cpp  scheme.cpp  shades.cpp  splitcomplementary.cpp  tints.cpp  websafe.cpp
src/events/: guild.cpp  log.cpp  ready.cpp
src/services/: color_api.cpp  color_utils.cpp  env_utils.cpp  message.cpp  palette_controls.cpp  palette_image.cpp  ratelimit.cpp  thread_pool.cpp  topgg.cpp
